# tissue

./: Cargo.toml
.tissue/issues/T-00002/: issue.md
src/: main.rs
src/base/: lax_bool.rs  lazy_value.rs  lazy_value_tests.rs  mod.rs  phase.rs  phase_tests.rs
src/commands/: command.rs  lint_issue.rs  list_issues.rs  mod.rs  show_issue.rs
src/configuration/: configuration.rs
src/errors/: field_mapping_parsing.rs  issue.rs  issue_fetch.rs  issue_parsing.rs  issues_tree.rs  mod.rs  text_file_fetch.rs  tree_listing.rs
src/git/: branch.rs  branch_resolution_error.rs  discovery.rs  list_tree_entries.rs  mod.rs
src/io/: decorate.rs  mod.rs  paging.rs  safe_stdio.rs
src/issues/: mod.rs  parser.rs
src/issues/issue/: free_text_section_data.rs  issue.rs  mod.rs
src/issues/meta/: field_mapping.rs  meta.rs  mod.rs
src/issues/meta/parser/: mod.rs  (+1 more)
src/issues/parser/: make_markdown_parser.rs  mod.rs  parse_title.rs
src/logging/: entry.rs  logger.rs  logger_tests.rs  mod.rs  safe_print.rs
src/logging/backends/: backend.rs  debug_stdout.rs  error_stdout.rs  mod.rs  stdout.rs
src/phases/: configure_logging_backends.rs  execute_command.rs  global.rs  initial.rs  mod.rs  parse_command_line.rs  prepare_project_lazy_values.rs  setup_crash_handler.rs  verify_git_repository.rs  verify_git_repository_tests.rs
src/steps/: command_input.rs  get_tree.rs  issues_tree.rs  mod.rs  parse_field_mapping.rs  retrieve_issue_text.rs  retrieve_text_file.rs
src/structure/: directories.rs  paths.rs
src/system/: libc_wrappers.rs  mod.rs
src/users/: user_id.rs
(+14 files in other folders)
