[package]
name = "tissue"
version = "0.1.0"
edition = "2021"

[dependencies]
antidote = "1.0.0"
chrono = "0.4.19"
clap = "3.0.14"
command-fds = "0.2.1"
errno = "0.2.8"
git2 = "0.13.25"
human-panic = "1.0.3"
lazy_static = "1.4.0"
libc = "0.2.117"
matches = "0.1.9"
pulldown-cmark = "0.9.1"
tempfile = "3.3.0"
toml = "0.5.8"
