[package]
name = "tissue"
version = "0.1.0"
edition = "2021"

[dependencies]
antidote = "1.0.0"
async-trait = "0.1.52"
chrono = "0.4.19"
clap = "3.0.14"
colored = "2.0.0"
command-fds = "0.2.1"
errno = "0.2.8"
futures = "0.3.21"
git2 = "0.13.25"
human-panic = "1.0.3"
lazy_static = "1.4.0"
libc = "0.2.117"
matches = "0.1.9"
once_cell = "1.10.0"
pulldown-cmark = "0.9.1"
tempfile = "3.3.0"
termcolor = "1.1.2"
tokio = "1.17.0"
toml = "0.5.8"
